Fix truncating issue in currently playing info

--- a/src/styles/Player.css
+++ b/src/styles/Player.css
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-width: 0;
 }
 
 .currently-playing-info p {
